examples/invalid/parse_distr_b.sals
-x 5
-y 4
-d abc
-i 100000

13-6  14-2 10-7
12-4  11-8  9-3
